crates/sol-types/tests/ui/keywords.stderr
error: expected identifier, found keyword `crate`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword

error: expected identifier, found keyword `crate`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `crate`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `crate`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct

error: expected identifier, found keyword `crate`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword

error: expected identifier, found keyword `self`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword

error: expected identifier, found keyword `self`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `self`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `self`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct

error: expected identifier, found keyword `self`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `Self`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct

error: expected identifier, found keyword `Self`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword

error: expected identifier, found keyword `super`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword

error: expected identifier, found keyword `super`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `super`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword

error: expected identifier, found keyword `super`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct

error: expected identifier, found keyword `super`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword

error: expected identifier, found keyword `as`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `as` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `as`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `as` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `as`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `as`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `as` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `as`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `as` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `break`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `break` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `break`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `break` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: invalid const generic expression
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
  |
help: expressions must be enclosed in braces to be used as const generic arguments
  |
6 |             struct { $kw } {
  |                    +     +

error: expected type, found keyword `break`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected type

error: expected identifier, found keyword `break`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `break` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected identifier, found keyword `break`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `break` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `break`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `break` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `continue`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `continue` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `continue`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `continue` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected type, found keyword `continue`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected type

error: expected identifier, found keyword `continue`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `continue` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected identifier, found keyword `continue`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `continue` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `continue`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `continue` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `else`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `else` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `else`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `else` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `else`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `else`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `else` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `else`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `else` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `enum`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `enum` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `enum`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `enum` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `enum`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `enum`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `enum` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `enum`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `enum` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `false`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `false` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `false`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `false` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected type, found keyword `false`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected type

error: expected identifier, found keyword `false`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `false` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected identifier, found keyword `false`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `false` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `false`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `false` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `for`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `for` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `for`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `for` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected `<`, found `>`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ expected `<`
...
50 | / kws! {
51 | |     as
52 | |     break
53 | |     continue
...  |
75 | |     try
76 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `sol` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier, found keyword `for`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `for` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `for`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `for` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `if`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `if` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `if`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `if` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `if`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `if`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `if` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `if`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `if` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `in`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `in` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `in`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `in` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `in`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `in`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `in` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `in`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `in` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `let`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `let` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `let`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `let` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected expression, found `let` statement
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
  |
  = note: only supported directly in conditions of `if` and `while` expressions

error: expected one of `>`, a const expression, lifetime, or type, found keyword `let`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `let`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `let` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `let`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `let` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `match`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `match` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `match`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `match` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `match`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `match`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `match` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `match`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `match` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `return`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `return` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `return`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `return` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected type, found keyword `return`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected type

error: expected identifier, found keyword `return`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `return` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected identifier, found keyword `return`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `return` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `return`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `return` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `static`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `static` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `static`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `static` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `static`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `static`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `static` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `static`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `static` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `struct`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `struct` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `struct`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `struct` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `struct`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `struct`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `struct` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `struct`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `struct` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `true`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `true` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `true`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `true` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected type, found keyword `true`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected type

error: expected identifier, found keyword `true`
 --> tests/ui/keywords.rs:7:22
  |
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `true` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected identifier, found keyword `true`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `true` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `true`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `true` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `type`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `type` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `type`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `type` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `type`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `type`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `type` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `type`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `type` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `while`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found keyword
  |
help: escape `while` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found keyword `while`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found keyword
  |
help: escape `while` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found keyword `while`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found keyword `while`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `while` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found keyword `while`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found keyword
   |
help: escape `while` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `abstract`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `abstract` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `abstract`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `abstract` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `abstract`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `abstract`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `abstract` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `abstract`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `abstract` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `do`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `do` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `do`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `do` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `do`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `do`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `do` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `do`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `do` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `final`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `final` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `final`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `final` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `final`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `final`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `final` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `final`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `final` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `macro`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `macro` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `macro`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `macro` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `macro`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `macro`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `macro` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `macro`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `macro` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `override`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `override` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `override`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `override` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `override`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `override`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `override` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `override`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `override` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `typeof`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `typeof` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `typeof`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `typeof` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected `(`, found `>`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
   | |                       - expected `(`
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ unexpected token
...
50 | / kws! {
51 | |     as
52 | |     break
53 | |     continue
...  |
75 | |     try
76 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `sol` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier, found reserved keyword `typeof`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `typeof` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `typeof`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `typeof` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `virtual`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `virtual` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `virtual`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `virtual` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `virtual`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `virtual`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `virtual` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `virtual`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `virtual` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `try`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected identifier, found reserved keyword
  |
help: escape `try` to use it as an identifier
  |
6 |             struct r#$kw {
  |                    ++

error: expected identifier, found reserved keyword `try`
 --> tests/ui/keywords.rs:7:22
  |
6 |             struct $kw {
  |                    --- while parsing this struct
7 |                 uint $kw;
  |                      ^^^ expected identifier, found reserved keyword
  |
help: escape `try` to use it as an identifier
  |
7 |                 uint r#$kw;
  |                      ++

error: expected one of `>`, a const expression, lifetime, or type, found reserved keyword `try`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ expected one of `>`, a const expression, lifetime, or type

error: expected identifier, found reserved keyword `try`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                      ---      ^^^ expected identifier, found reserved keyword
   |                      |
   |                      while parsing this struct
   |
help: escape `try` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error: expected identifier, found reserved keyword `try`
  --> tests/ui/keywords.rs:10:31
   |
10 |             function $kw(uint $kw);
   |                               ^^^ expected identifier, found reserved keyword
   |
help: escape `try` to use it as an identifier
   |
10 |             function $kw(uint r#$kw);
   |                               ++

error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ there are too many leading `super` keywords

error[E0433]: failed to resolve: there are too many leading `super` keywords
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^ there are too many leading `super` keywords

error[E0573]: expected type, found module `crate`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
   | |                    --- you might have meant to refer to this struct
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ not a type
...
42 | / kws! {
43 | |     crate
44 | |     self
45 | |     Self
46 | |     super
47 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0574]: expected struct, variant or union type, found module `crate`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
   | |                    --- you might have meant to refer to this struct
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ not a struct, variant or union type
...
42 | / kws! {
43 | |     crate
44 | |     self
45 | |     Self
46 | |     super
47 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0573]: expected type, found module `crate`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
  |                    |
  |                    you might have meant to refer to this struct
  |                    not a type
  |
help: consider importing this struct instead
  |
1 + use crate::crate;
  |

error[E0573]: expected type, found module `self`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |         ^ help: a self type with a similar name exists: `Self`
   | |_________|
   |
...
42 | / kws! {
43 | |     crate
44 | |     self
45 | |     Self
46 | |     super
47 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0574]: expected struct, variant or union type, found module `self`
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |         ^ help: a self type with a similar name exists: `Self`
   | |_________|
   |
...
42 | / kws! {
43 | |     crate
44 | |     self
45 | |     Self
46 | |     super
47 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0573]: expected type, found module `self`
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
  |
help: a self type with a similar name exists
  |
6 |             struct Self {
  |                    ~~~~
help: consider importing this struct instead
  |
1 + use crate::self;
  |

error[E0425]: cannot find value `value` in this scope
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^ not found in this scope
...
50 | / kws! {
51 | |     as
52 | |     break
53 | |     continue
...  |
75 | |     try
76 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `sol` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `Self` is not valid in the self type of an impl block
  --> tests/ui/keywords.rs:5:9
   |
5  | /         sol! {
6  | |             struct $kw {
7  | |                 uint $kw;
8  | |             }
9  | |
10 | |             function $kw(uint $kw);
11 | |         }
   | |_________^
...
42 | / kws! {
43 | |     crate
44 | |     self
45 | |     Self
46 | |     super
47 | | }
   | |_- in this macro invocation
   |
   = note: replace `Self` with a different type
   = note: this error originates in the derive macro `Clone` which comes from the expansion of the macro `kws` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `Self` is not valid in the self type of an impl block
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
  |
  = note: replace `Self` with a different type

error[E0747]: constant provided when a type was expected
 --> tests/ui/keywords.rs:6:20
  |
6 |             struct $kw {
  |                    ^^^
